--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,10 @@ body {
   @apply -rotate-45;
 }
 
+.logo {
+  background-image: url("/photo/logo1.jpg")
+}
+
 /* Customize website's scrollbar like Mac OS
 Not supports in Firefox and IE */
 
